# spelunk

./: .gitignore  ARCHITECTURE.md  CAPTURE_ARCHITECTURE.md  CHANGELOG.md  CLI_SPEC.md  CONTRIBUTING.md  DECISIONS.md  DESIGN_LANGUAGE.md  DESIGN_PRINCIPLES.md  LICENSE  README.md  ROADMAP.md  STORAGE_FORMAT.md  TUI_COMPONENTS.md  VISION.md  pyproject.toml
docs/: ARCHITECTURE.md  CAPTURE_CONFIG.md  CLEAN_INSTALL.md  CLI_SPEC.md  CONTRIBUTING.md  DECISIONS.md  DOMAIN_MODEL.md  EXAMPLE_SMOKE.md  MILESTONES.md  PRODUCT_SPEC.md  PYPI_RELEASE.md  PYTHON_API.md  RELEASE.md  TESTING_STRATEGY.md  TUI_DESIGN.md
examples/: capture.json  capture.toml  generate_samples.py  model_factory.py
src/spelunk/: __init__.py  _version.py  errors.py
src/spelunk/adapters/: __init__.py  base.py
src/spelunk/analysis/: __init__.py  statistics.py
src/spelunk/api/: __init__.py
src/spelunk/capture/: __init__.py  datasets.py  pipeline.py
src/spelunk/cli/: app.py
src/spelunk/config/: __init__.py  capture.py  recent_runs.py
src/spelunk/diagnostics/: __init__.py  interfaces.py  registry.py
src/spelunk/domain/: __init__.py  activation.py  comparison.py  diagnostics.py  ids.py  layer.py  model.py  report.py  run.py  statistics.py  types.py
tests/: test_activation_health_diagnostic.py  test_activation_storage.py  test_cli_app.py  test_dataset_loaders.py  test_domain_model.py  test_examples.py  test_import_boundaries.py  test_package_import.py  test_pytorch_adapter.py  test_recent_runs.py  test_session_service.py  test_statistics_engine.py  test_storage_manifest.py  test_tui_app.py
(+17 files in other folders)
