[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spelunk"
version = "0.0.0"
description = "Terminal-native IDE for learned representations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sarthak Engala" },
]
keywords = [
  "machine-learning",
  "interpretability",
  "representations",
  "terminal",
  "tui",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "rich>=13.7",
  "textual>=0.70",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]
pytorch = [
  "torch>=2.2",
]
tui = []
arrays = [
  "numpy>=1.26",
  "zarr>=2.18",
]

[project.scripts]
spelunk = "spelunk.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spelunk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src/spelunk", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers",
]
